--- a/advect.org/src/layouts/Layout.astro
+++ b/advect.org/src/layouts/Layout.astro
@@ -18,9 +18,14 @@ import Header from "./Header.astro";
       type="module"
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
     ></script>
-    <script
-      nomodule
-      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/dark.min.css">
+    <script is:inline src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
+    
+    <!-- and it's easy to individually load additional languages -->
+    <script is:inline src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/languages/xml.min.js"></script>
+    <script is:inline src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/languages/bash.min.js"></script>
+
+    
     <title>Advect Web Components</title>
   </head>
   <body>
@@ -103,3 +108,4 @@ import Header from "./Header.astro";
       center center;
   }
 </style>
+<script is:inline>hljs.highlightAll();</script>
