--- a/advect.org/src/layouts/Footer.astro
+++ b/advect.org/src/layouts/Footer.astro
@@ -1,13 +1,7 @@
 <footer class="footer mt-5">
   <div class="content has-text-centered">
     <p>
-      <strong>AstroJS</strong> by <a href="https://yourwebsite.com">Your Name</a
-      >. The source code is licensed <a
-        href="http://opensource.org/licenses/mit-license.php">MIT</a
-      >. The website content is licensed <a
-        href="http://creativecommons.org/licenses/by-nc-sa/4.0/"
-        >CC BY NC SA 4.0</a
-      >.
+      &copy; M0ve Media all rights reserved
     </p>
   </div>
 </footer>
