--- a/advect.org/src/components/Welcome.astro
+++ b/advect.org/src/components/Welcome.astro
@@ -4,27 +4,32 @@ import background from "../assets/background.svg";
 import InstallLibrary from "../snippets/InstallLibrary.astro";
 ---
 
-<div id="container">
+<div class="container">
   <img id="background" src={background.src} alt="" fetchpriority="high" />
   <main>
-    <section class="hero is-medium grid-effect effect-1">
+    <section class="hero is-small grid-effect effect-1">
       <div class="hero-body">
-        <div class="container has-text-centered">
-          <h1 class="title is-1 signature-effect">Advect</h1>
-          <h2 class="subtitle has-text-light">
-            Lightweight Webcomponent framework for any project
-          </h2>
-          <div class="level are-rounded">
-            <div class="level-item">
-              <a class="button is-rounded is-link is-dark is-outlined" href="/docs#getting-started">
-                Get Started
-              </a>
+        <div class="container">
+          <div class="has-text-centered">
+            <h1 class="title is-1 signature-effect">Advect</h1>
+            <h2 class="subtitle has-text-light">
+              Lightweight Webcomponent library for any project.
+            </h2>
+            <div class="level are-rounded">
+              <div class="level-item">
+                <a
+                  class="button is-link is-dark is-outlined"
+                  href="/docs#getting-started"
+                >
+                  Get Started
+                </a>
+              </div>
             </div>
           </div>
-            <div class="">
-              <InstallLibrary />
-            </div>
-      
+
+          <div class="">
+            <InstallLibrary />
+          </div>
         </div>
       </div>
     </section>
