--- a/advect.org/src/layouts/Header.astro
+++ b/advect.org/src/layouts/Header.astro
@@ -21,9 +21,9 @@
         <a class="navbar-item" href="/docs">
           Documentation
         </a>
-        <a class="navbar-item" href="/blog">
+        <!-- <a class="navbar-item" href="/blog">
           Blog
-        </a>
+        </a> -->
         <!-- <div class="navbar-item has-dropdown is-hoverable">
           <a class="navbar-link">
             More
