--- a/advect.org/src/pages/index.astro
+++ b/advect.org/src/pages/index.astro
@@ -10,6 +10,6 @@ import Features from '../snippets/Features.astro';
 
 <Layout>
 	<Welcome />
-	<FirstComponent />
+	<FirstComponent title="Hello World Component" />
 	<Features />
 </Layout>
