--- a/advect.org/src/snippets/docs/InstallingAdvect.astro
+++ b/advect.org/src/snippets/docs/InstallingAdvect.astro
@@ -9,6 +9,6 @@ import InstallLibrary from "../InstallLibrary.astro";
         <p>Installation is pretty simple, just include the CDN in your html, or install the pacakge via npm (or your prefered package solution, not on JSR just yet.)</p>
         <InstallLibrary></InstallLibrary>
         <p>When installing from a package manager you will need to include the library somewhere in your code</p>
-         <CodeExample lang="javascript" is:raw>import {advect} from "advect/advect" </CodeExample>
+         <CodeExample lang="javascript" is:raw>import { advect } from "@advect/advect" </CodeExample>
     </div>
 </section>
