--- a/advect.org/src/components/CodeExample.astro
+++ b/advect.org/src/components/CodeExample.astro
@@ -1,5 +1,5 @@
 ---
-import { generateGUID, runHighlighter } from "../lib";
+import { generateGUID } from "../lib";
 const lang = Astro.props.lang ?? "xml";
 const id = generateGUID();
 ---
