--- a/advect.org/src/layouts/Header.astro
+++ b/advect.org/src/layouts/Header.astro
@@ -1,7 +1,7 @@
 <nav id="main-nav" class="navbar" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
       <a class="navbar-item" href="/">
-        <img src="logo.svg" alt="advect logo" width="80" height="80" />
+        <img src="/logo.svg" alt="advect logo" width="80" height="80" />
       </a>
   
       <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
