--- a/advect.org/src/layouts/Layout.astro
+++ b/advect.org/src/layouts/Layout.astro
@@ -16,7 +16,7 @@ import Header from "./Header.astro";
     />
     <link
       rel="stylesheet"
-      href="main.css"
+      href="/main.css"
     />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.19.1/cdn/themes/dark.css" />
     <script type="module" src="https://cdn.jsdelivr.net/npm/@shoelace-style/shoelace@2.19.1/cdn/shoelace-autoloader.js"></script>
