--- a/advect.org/src/layouts/Header.astro
+++ b/advect.org/src/layouts/Header.astro
@@ -18,7 +18,7 @@
           Home
         </a>
   
-        <a class="navbar-item" href="/docs">
+        <a class="navbar-item" href="/docs/">
           Documentation
         </a>
         <!-- <a class="navbar-item" href="/blog">
