--- a/advect.org/src/pages/index.astro
+++ b/advect.org/src/pages/index.astro
@@ -10,6 +10,8 @@ import Features from '../snippets/Features.astro';
 
 <Layout>
 	<Welcome />
-	<FirstComponent title="Hello World Component" />
+	<div class="px-3">
+		<FirstComponent title="Hello World Component" />
+	</div>
 	<Features />
 </Layout>
