--- a/advect.org/src/snippets/Features.astro
+++ b/advect.org/src/snippets/Features.astro
@@ -86,9 +86,9 @@ import {advectFeatures} from "../data/feature"
     display: grid;
 
     margin: 20px;
-    -webkit-box-shadow: 10px 10px 16px -4px rgb(103, 0, 172);
-    -moz-box-shadow: 10px 10px 16px -4px rgb(103, 0, 172);
-    box-shadow: 10px 10px 16px -4px rgb(103, 0, 172);
+    -webkit-box-shadow: 10px 10px 16px -4px var(--secondary-color);
+    -moz-box-shadow: 10px 10px 16px -4px var(--secondary-color);
+    box-shadow: 10px 10px 16px -4px var(--secondary-color);
     border-bottom-left-radius: 8px;
     border-bottom-right-radius: 8px;
     min-width: 294px;
