--- a/advect.org/src/snippets/docs/AboutAdvect.astro
+++ b/advect.org/src/snippets/docs/AboutAdvect.astro
@@ -1,6 +1,6 @@
-<section class="section">
+<section>
     <div class="content">
-        <h2>What is Advect?</h2>
+        <h1 class="title is-1 signature-effect">What is Advect?</h1>
         <div class="block">
             <p>
                 Advect is a library for creating web components (Custom Web Elements). It provides a pattern for creating and loading custom web elements with NO build step. It aims to unlock the power of modern browser features without the lock-in to the javascript build ecosystem that is common amongst other libraries (PHP/Java/ASP/Py devs rejoice 😉).
@@ -12,8 +12,8 @@
                 At its core Advect is 3 parts.
                 <ul>
                     <li>The core library which loads/registers your components via <code> &lt;template&gt;</code> and <code> &lt;script type="text/adv"&gt;</code> tags. </li>
-                    <li>The <a href="#advectview">AdvectView</a> (<code>&lt;adv-view&gt;</code>) component which is a stand alone component which handles templating powered by the <a target="_blank" href="https://eta.js.org/">Eta.js</a> library. </li>
-                    <li>The <a href="#advectelement">AdvectElement</a> class which serves as a base class for your custom elements and provides access to the systems features.</li>
+                    <li>The <a href="/docs/advect-view">AdvectView</a> (<code>&lt;adv-view&gt;</code>) component which is a stand alone component which handles templating powered by the <a target="_blank" href="https://eta.js.org/">Eta.js</a> library. </li>
+                    <li>The <a href="/docs/custom-elements">AdvectElement</a> class which serves as a base class for your custom elements and provides access to the systems features.</li>
                 </ul>
             </p>
             <p>
