--- a/advect.org/src/snippets/docs/CreatingYourFirstComponent.astro
+++ b/advect.org/src/snippets/docs/CreatingYourFirstComponent.astro
@@ -2,7 +2,7 @@
 import FirstComponent from "../FirstComponent.astro";
 ---
 
-<section class="section">
+<section >
     <div class="content">
         <h2 id="creating-a-component">Creating a Component</h2>
         <FirstComponent></FirstComponent>
