--- a/advect.org/src/snippets/docs/InstallingAdvect.astro
+++ b/advect.org/src/snippets/docs/InstallingAdvect.astro
@@ -3,7 +3,7 @@ import CodeExample from "../../components/CodeExample.astro";
 import InstallLibrary from "../InstallLibrary.astro";
 ---
 
-<section class="section">
+<section>
     <div class="content">
         <h2 id="installation">Installation</h2>
         <p>Installation is pretty simple, just include the CDN in your html, or install the pacakge via npm (or your prefered package solution, not on JSR just yet.)</p>
