--- a/advect.org/src/layouts/Header.astro
+++ b/advect.org/src/layouts/Header.astro
@@ -1,26 +1,37 @@
+---
+import { type DocPage, docPages } from "../data/docs";
+
+---
+
 <nav id="main-nav" class="navbar" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
       <a class="navbar-item" href="/">
         <img src="/logo.svg" alt="advect logo" width="80" height="80" />
       </a>
   
-      <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
-        <span aria-hidden="true"></span>
-        <span aria-hidden="true"></span>
-        <span aria-hidden="true"></span>
-        <span aria-hidden="true"></span>
+      <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="basic-navbar">
+        <ion-icon name="menu-outline"></ion-icon>
       </a>
     </div>
   
-    <div id="navbarBasicExample" class="navbar-menu">
+    <div id="basic-navbar" class="navbar-menu">
       <div class="navbar-start">
         <a class="navbar-item" href="/">
           Home
         </a>
   
-        <a class="navbar-item" href="/docs/">
-          Documentation
-        </a>
+        <div class="navbar-item has-dropdown is-hoverable">
+          <a class="navbar-link" href="/docs">
+            Documentation
+          </a>
+          <div class="navbar-dropdown">
+            {docPages.filter(p => p.url != "/docs").map( p => (
+              <a class="navbar-item" href={p.url}>
+                {p.pageInfo.name}
+              </a>
+            ))}
+        </div>
+        </div>  
         <!-- <a class="navbar-item" href="/blog">
           Blog
         </a> -->
@@ -57,18 +68,31 @@
     </div>
   </nav>
   <script>
-    const nav = document.getElementById('main-nav');
+    const nav = document.getElementById('basic-navbar');
+    const navToggle = document.querySelector('[data-target="basic-navbar"]') as HTMLButtonElement;
+    if (navToggle){
+      navToggle.onclick = () =>{
+          nav?.classList.toggle('is-active');
+      }
+    }
+  
+    window.onresize =()=>{
+    //  closeNav();
+    }
     document.addEventListener('DOMContentLoaded', () => {
     // Function to highlight the current route link
     function highlightCurrentRoute() {
         const currentRoute = window.location.pathname;
         const navLinks = document.querySelectorAll('#main-nav a');
-
         navLinks.forEach(link => {
+            let activeClass = link.parentElement?.matches('.navbar-dropdown')
+              ? 'is-selected'
+              : 'active'
+
             if (link.getAttribute('href') === currentRoute) {
-                link.classList.add('active');
+                link.classList.add(activeClass);
             } else {
-                link.classList.remove('active');
+                link.classList.remove(activeClass);
             }
         });
     }
@@ -82,9 +106,14 @@
 
   </script>
   <style>
-    #main-nav a.active{
-      font-weight: bold;
+    #main-nav { 
+      a.active{
+        font-weight: bold;
     }
+    position:-webkit-sticky; 
+    position:sticky;
+    top:0;
+  }
   </style>
 
   
