--- a/advect.org/src/pages/docs/custom-elements.astro
+++ b/advect.org/src/pages/docs/custom-elements.astro
@@ -4,10 +4,35 @@ import DocsLayout from "../../layouts/DocsLayout.astro";
 
 export const pageInfo: DocPage = {
     name:"Custom Elements",
-    index:2
+    index:1
 }
 ---
 
 <DocsLayout>
-    
+    <div class="container">
+        <section>
+            <div class="content">
+                <h1 class="title is-1 signature-effect">Creating Elements</h1>
+                <div class="block">
+                    <p>
+                        Advect is a library for creating web components (Custom Web Elements). It provides a pattern for creating and loading custom web elements with NO build step. It aims to unlock the power of modern browser features without the lock-in to the javascript build ecosystem that is common amongst other libraries (PHP/Java/ASP/Py devs rejoice 😉).
+                        <br>
+                        <br>
+                        Components can be defined in <code> &lt;template&gt;</code> embeded in your HMTL or easily loaded from any endpoint serving html.
+                        <br>
+                        <br>
+                        At its core Advect is 3 parts.
+                        <ul>
+                            <li>The core library which loads/registers your components via <code> &lt;template&gt;</code> and <code> &lt;script type="text/adv"&gt;</code> tags. </li>
+                            <li>The <a href="/docs/advect-view">AdvectView</a> (<code>&lt;adv-view&gt;</code>) component which is a stand alone component which handles templating powered by the <a target="_blank" href="https://eta.js.org/">Eta.js</a> library. </li>
+                            <li>The <a href="/docs/custom-elements">AdvectElement</a> class which serves as a base class for your custom elements and provides access to the systems features.</li>
+                        </ul>
+                    </p>
+                    <p>
+                        Advect is inspired by libraries <a target="_blank" href="https://alpinejs.dev/">Alpine.js</a>, <a href="htmx.org">HTMX</a>, <a target="_blank" href="https://shoelace.style/">Shoelace</a>, <a target="_blank" href="https://swiperjs.com/">Swiper</a> and <a target="_blank" href="https://lit.dev/">Lit.js</a> (Even though they may catch some strays from me, T'is all love 😙) which all give a lot of BANG for your integration buck. Advect aims to K.I.S.S. users on the forehead and make your web project that much simpler.
+                    </p>
+                </div>
+            </div>
+        </section>
+    </div>
 </DocsLayout>
