--- a/advect.org/src/pages/docs/index.astro
+++ b/advect.org/src/pages/docs/index.astro
@@ -8,7 +8,7 @@ import DocsLayout from "../../layouts/DocsLayout.astro";
 import { type DocPage } from "../../data/docs";
 
 export const pageInfo:DocPage ={
-  name: "Introduction",
+  name: "Docs Home",
   index:0
 }
 
