--- a/advect.org/src/snippets/docs/AboutAdvect.astro
+++ b/advect.org/src/snippets/docs/AboutAdvect.astro
@@ -3,7 +3,7 @@
         <h1 class="title is-1 signature-effect">What is Advect?</h1>
         <div class="block">
             <p>
-                Advect is a library for creating web components (Custom Web Elements). It provides a pattern for creating and loading custom web elements with NO build step. It aims to unlock the power of modern browser features without the lock-in to the javascript build ecosystem that is common amongst other libraries (PHP/Java/ASP/Py devs rejoice 😉).
+                Advect is a library for creating web components (Custom Web Elements). It provides a pattern for creating and loading custom web elements with NO build step. It aims to unlock the power of modern browser features without the lock-in to the javascript build ecosystem that is common amongst other libraries (.Net/Java/PHP/Python devs rejoice 😉).
                 <br>
                 <br>
                 Components can be defined in <code> &lt;template&gt;</code> embeded in your HMTL or easily loaded from any endpoint serving html.
@@ -22,3 +22,4 @@
         </div>
     </div>
 </section>
+
