--- a/advect.org/src/snippets/docs/CreatingYourFirstComponent.astro
+++ b/advect.org/src/snippets/docs/CreatingYourFirstComponent.astro
@@ -4,8 +4,7 @@ import FirstComponent from "../FirstComponent.astro";
 
 <section >
     <div class="content">
-        <h2 id="creating-a-component">Creating a Component</h2>
-        <FirstComponent></FirstComponent>
+        <h2 id="creating-a-component">Your first Component</h2>
 
         <p>Creating a component is easy with the declarative syntax. All you need is a <code>&lt;template&gt;</code> with the following attributes:</p>
         <ul>
@@ -32,10 +31,9 @@ import FirstComponent from "../FirstComponent.astro";
         </ul>
         <br>
         <p>
-            Inside Template <code>&lt;template&gt;</code> Is where
+            The <code> &lt;script type="module"&gt;</code> tag is also <i>optional*</i>
         </p>
-        <p>
-            The <code> &lt;script type="text/adv"&gt;</code> tag is <i>optional*</i>
-        </p>
+        <FirstComponent></FirstComponent>
+
     </div>
 </section>
