like omg more docs

--- a/advect.org/src/pages/docs/advect-view.astro
+++ b/advect.org/src/pages/docs/advect-view.astro
@@ -1,6 +1,7 @@
 ---
 import type { DocPage } from "../../data/docs";
 import DocsLayout from "../../layouts/DocsLayout.astro";
+import UsingAdvectView from "../../snippets/docs/UsingAdvectView.astro";
 
 export const pageInfo: DocPage = {
     name:"Templating",
@@ -21,7 +22,10 @@ export const pageInfo: DocPage = {
                     <p>
 
                     </p>
+                    <UsingAdvectView />
                 </div>
+                <hr>
+
             </div>
         </section>
     </div>
