--- a/advect.org/src/pages/docs/recipes.astro
+++ b/advect.org/src/pages/docs/recipes.astro
@@ -9,5 +9,48 @@ export const pageInfo: DocPage = {
 ---
 
 <DocsLayout>
-    
+    <div class="container content">
+        <div>
+            <h1 class="title is-3 signature-effect">Recipes</h1>
+            <p>
+                Here are a few recipes to get you started.
+            </p>
+        </div>
+
+        <section>
+            <div class="content">
+                <h2 class="title is-3 signature-effect">Light Dom Components</h2>
+                <div class="block">
+                   <p>Light dom Is Awesome</p>
+                </div>
+            </div>
+        </section>
+        <hr>
+        <section>
+            <div class="content">
+                <h2 class="title is-3 signature-effect">Shadow Dom Components</h2>
+                <div class="block">
+                   <p>Shadow dom Is Awesome</p>
+                </div>
+            </div>
+        </section>
+        <hr>
+        <section>
+            <div class="content">
+                <h2 class="title is-3 signature-effect">Self Hosting</h2>
+                <div class="block">
+                   <p>Self hosting Is Awesome</p>
+                </div>
+            </div>
+        </section>
+        <hr>
+        <section>
+            <div class="content">
+                <h2 class="title is-3 signature-effect">Integrations</h2>
+                <div class="block">
+                   <p>Integrations Is Awesome</p>
+                </div>
+            </div>
+        </section>
+    </div>
 </DocsLayout>
