--- a/advect.org/src/layouts/Header.astro
+++ b/advect.org/src/layouts/Header.astro
@@ -50,9 +50,9 @@ import type { DocPage, DocPages } from "../data/docs"
         <a class="navbar-item" href="/">
           Home
         </a>
-        <a class="navbar-item" href="/blog">
+        <!-- <a class="navbar-item" href="/blog">
           Blog
-        </a>
+        </a> -->
         <div class="navbar-item has-dropdown is-hoverable">
           <a class="navbar-link" href="/docs">
             Documentation
